Add author for book collections

--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
             <div class="col-md-3 mx-3 book">
                 <img src="./img/book1.jpg" alt="Atomic Habits">
                 <h3>Atomic Habits</h3>
-                <p>Author: Author 1</p>
+                <p>Author: James Clear</p>
             </div>
             <div class="col-md-3 mx-3 book">
                 <img src="./img/book2.jpg" alt="A Brief History of Time">
                 <h3>A Brief History of Time</h3>
-                <p>Author: Author 1</p>
+                <p>Author: Stephen Hawking</p>
             </div>
             <div class="col-md-3 mx-3 book">
                 <img src="./img/book4.jpg" alt="The Davincy Code">
                 <h3>The Davincy Code</h3>
-                <p>Author: Author 1</p>
+                <p>Author: Dan Brown</p>
             </div>
         </div>
         <div class="container-fluid d-flex justify-content-end show-more-button">
